@@ -1,6 +1,6 @@
 Package: QTLRel
-Version: 0.2
-Date: 2011-3-10
+Version: 0.2-1
+Date: 2011-3-14
 Title: Tools for mapping of quantitative traits of genetically related
         individuals and calculating identity coefficients from a
         pedigree
@@ -21,6 +21,6 @@ Suggests: lattice
 LazyLoad: yes
 LazyData: no
 License: GPL (>= 2)
-Packaged: 2011-03-11 14:53:25 UTC; rcheng
+Packaged: 2011-03-14 05:24:05 UTC; rcheng
 Repository: CRAN
-Date/Publication: 2011-03-11 14:56:11
+Date/Publication: 2011-03-14 08:31:40
